# django-async-comparison

./: .gitignore  README.md  locustfile.py  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: cpu_bound_analysis.md
myapp/: repository.py  urls.py  views.py
